deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phomem-cosim
  name: phomem-cosim-service
  namespace: phomem-production
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: phomem-cosim
  type: ClusterIP
